# flounder

./: .env.example  README.md  pyproject.toml
flounder/: app.py  classifier.py  config.py  extractor.py  sheets.py  whatsapp.py
